Update 01-moving-existing-apps.md